# c_homework

./: .gitignore  CMakeLists.txt
HW1/: Hello.c  drawing.c  ladder.c  task1.c
HW10/: G_1.c  G_2.c  G_3.c  G_4.c  G_5.c
HW3/: avg.c  mult.c  mult_dig.c  sum.c  sum_dig.c
HW4/: A_10.c  A_11.c  A_14.c  A_15.c  A_16.c  A_17.c  A_18.c  A_19.c  A_6.c  A_7.c  A_8.c  A_9.c
HW5/: B_1.c  B_10.c  B_11.c  B_12.c  B_13.c  B_14.c  B_15.c  B_16.c  B_17.c  B_18.c  B_19.c  B_2.c  B_20.c  B_21.c  B_3.c  B_4.c  B_5.c  B_6.c  B_7.c  B_8.c  B_9.c
HW6/: C_1.c  C_10.c  C_11.c  C_12.c  C_13.c  C_14.c  C_15.c  C_16.c  C_17.c  C_18.c  C_19.c  C_2.c  C_20.c  C_3.c  C_4.c  C_5.c  C_6.c  C_7.c  C_8.c  C_9.c
HW7/: D_1.c  D_2.c  D_3.c  D_4.c  D_5.c  D_6.c  D_7.c  D_8.c  D_9.c
HW8/: E_1.c  E_10.c  E_11.c  E_12.c  E_13.c  E_14.c  E_15.c  E_16.c  E_17.c  E_18.c  E_19.c  E_2.c  E_20.c  E_3.c  E_4.c  E_5.c  E_6.c  E_7.c  E_8.c  E_9.c
HW9/: F_1.c  F_10.c  F_11.c  F_12.c  F_13.c  F_14.c  F_15.c  F_16.c  F_17.c  F_18.c  F_19.c  F_2.c  F_20.c  F_3.c  F_4.c  F_5.c  F_6.c  F_7.c  F_8.c  F_9.c
homework_test_git/: task_first_git.c
