cmake_minimum_required(VERSION 3.20)
project(c_homework C)

set(CMAKE_C_STANDARD 11)

# Привет гиту:
add_executable(task_first_git homework_test_git/task_first_git.c)

# HW 1
add_executable(hw1_task1 HW1/Hello.c)
add_executable(hw1_task2 HW1/ladder.c)
add_executable(hw1_task3 HW1/drawing.c)

# HW 3
add_executable(hw3_task1 HW3/sum.c)
add_executable(hw3_task2 HW3/mult.c)
add_executable(hw3_task3 HW3/avg.c)
add_executable(hw3_task4 HW3/sum_dig.c)
add_executable(hw3_task5 HW3/mult_dig.c)

# HW 4
add_executable(hw4_task1 HW4/A_6.c)
add_executable(hw4_task2 HW4/A_7.c)
add_executable(hw4_task3 HW4/A_8.c)
add_executable(hw4_task4 HW4/A_9.c)
add_executable(hw4_task5 HW4/A_10.c)
add_executable(hw4_task6 HW4/A_11.c)
add_executable(hw4_task7 HW4/A_14.c)
add_executable(hw4_task8 HW4/A_15.c)
add_executable(hw4_task9 HW4/A_16.c)
add_executable(hw4_task10 HW4/A_17.c)
add_executable(hw4_task11 HW4/A_18.c)
add_executable(hw4_task12 HW4/A_19.c)

# HW 5
add_executable(hw5_task1 HW5/B_1.c)
add_executable(hw5_task2 HW5/B_2.c)
add_executable(hw5_task3 HW5/B_3.c)
add_executable(hw5_task4 HW5/B_4.c)
add_executable(hw5_task5 HW5/B_5.c)
add_executable(hw5_task6 HW5/B_6.c)
add_executable(hw5_task7 HW5/B_7.c)
add_executable(hw5_task8 HW5/B_8.c)
add_executable(hw5_task9 HW5/B_9.c)
add_executable(hw5_task10 HW5/B_10.c)
add_executable(hw5_task11 HW5/B_11.c)
add_executable(hw5_task12 HW5/B_12.c)
add_executable(hw5_task13 HW5/B_13.c)
add_executable(hw5_task14 HW5/B_14.c)
add_executable(hw5_task15 HW5/B_15.c)
add_executable(hw5_task16 HW5/B_16.c)
add_executable(hw5_task17 HW5/B_17.c)
add_executable(hw5_task18 HW5/B_18.c)
add_executable(hw5_task19 HW5/B_19.c)
add_executable(hw5_task20 HW5/B_20.c)
add_executable(hw5_task21 HW5/B_21.c)